...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textColor="?android:attr/colorAccent"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:id="@+id/btn_ignore"
            tools:targetApi="lollipop"
            android:onClick="IgnoreToast"/>

        <Button
            android:text="@string/remove"
            style="@style/Widget.AppCompat.Button.Borderless"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textColor="?android:attr/colorAccent"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:id="@+id/btn_remove2"
            tools:targetApi="lollipop"
            android:onClick="RemoveToast"/>

    </LinearLayout>
</ScrollView>
