...
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        android:labelFor="@+id/signinBtn"
        tools:ignore="LabelFor"
        android:hint="@string/e_mail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:hint="@string/password" />

    <Button
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AdminSigninBtn"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        style="@style/Widget.AppCompat.Button.Borderless"
...
