...
    tools:targetApi="lollipop" />

    <Button
        android:text="@string/view_reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnViewReports"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        style="@style/Widget.AppCompat.Button.Borderless"
...
