...
        android:ems="10"
        android:layout_marginTop="28dp"
        android:id="@+id/emailTxt"
        android:text="@string/e_mail"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        android:labelFor="@+id/signinBtn"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
...
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/browse_vendors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/browseBtn"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>



...
