...
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="?android:attr/colorAccent"
        tools:targetApi="lollipop" />

    <Button
        android:text="Elite Decor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEliteDecor"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
...
