...
        android:textColor="@color/colorAccent"/>

    <Button
        android:text="@string/search_vendor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSearchVendor"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        style="@style/Widget.AppCompat.Button.Borderless"
...
